[FIX] Fixed some typos of the pways_so_po_consignment module

--- a/pways_so_po_consignment/static/description/index.html
+++ b/pways_so_po_consignment/static/description/index.html
@@ -19,11 +19,11 @@
                 Retailer agrees to pay a seller or consignor for merchandise after the item sells or <br/>
                 selling goods (clothing, furniture, etc.) through a third-party vendor such as a consignment store.<br/>
                 the consignee is financially responsible (the buyer) for the receipt of a shipment also includes<<br/>
-                commision on consigment and multiple reports <br/>
+                commission on consignment and multiple reports <br/>
                 
                 Case: 1 <br/> Purchase Consignment <br/><br/>
 
-                Onboard Consignee with consigment terms and conditions or commission details.<br/>
+                Onboard Consignee with consignment terms and conditions or commission details.<br/>
                 Consignee sents us his/her goods. <br/>
                 We will received it in our warehouse and we will add our expenses on it (light bill , cleaning etc) <br/>
                 When we sales his/her goods, there will be commission on that sales sd predefined terms <br/>
@@ -34,7 +34,7 @@
                     Once real time goods are sold at consignment store and based on report send by consignor<br/>
                     We will create sale order in odoo from consignment to customer to adjust inventory and process<br/>
                     Commission should be paid to consigner based on sales <br/>
-                    In some cases saleperson goto store and counts goods and based on analysis, internal transfer is made to consigment location <br/>
+                    In some cases salesperson goto store and counts goods and based on analysis, internal transfer is made to consignment location <br/>
 
             </h5>
             <h4 class="oe_slogan">How to use</h4>
@@ -150,7 +150,7 @@
                         <i class="fa fa-3x fa fa-server"></i>
                     </div>
                     <h4 style="font-size: large; color: #a78933;" class="font-weight-bold text-uppercase">
-                        Maintaince
+                        Maintenance
                     </h4>
                     <p style="font-size: large; color: #869ab8; font-family: lato;" class="text-gray-700 mb-4">
                       We build solutions for peculiar business problems according to customization required to manage the specific work flows.
@@ -186,7 +186,7 @@
                         Training
                     </h4>
                     <p style="font-size: large; color: #869ab8; font-family: lato;" class="text-gray-700 mb-4">
-                        We provide guidance and training for the team to understand the software and provide constant needed suppor
+                        We provide guidance and training for the team to understand the software and provide constant needed support
                     </p>
                     <br class="visible-md" />
                 </div>
